# notesegmentation

./: .gitignore  CMakeLists.txt  README.md  setup.py
docs/: Makefile  conf.py  index.rst  installation.rst
examples/: example.py
notesegmentation/: __init__.py  _amplitude_envelopes.pyx  _segmentation.pyx  _util.pyx  amplitude_envelopes.py  partial_stability.py  segmentation.py  util.py
src/: amplitude_envelopes.cpp  amplitude_envelopes.h  exceptions.cpp  exceptions.h  segmentation.cpp  segmentation.h  util.cpp  util.h  window.cpp  window.h
tests/audio/: README
tests/cpp/: test_common.h  test_segmentation.cpp  test_segmentation.h  tests.cpp
tests/py/: test_amplitude_envelopes.py  test_segmentation.py  test_util.py
